--- a/src/extension/web/main.scss
+++ b/src/extension/web/main.scss
@@ -18,3 +18,12 @@ body {
     background-color: azdo.$neutral-2;
     width: 100%;
 }
+
+.full-height {
+    height: 100vh;
+}
+
+.sticky-top-0 {
+    position: sticky;
+    top: 0;
+}
